--- a/style.css
+++ b/style.css
@@ -9,15 +9,16 @@ body {
 }
 
 .header {
-  margin: 40px 0;
+  margin: 40px ;
 }
 
 .header__avatar {
-  border-radius: 50%;
+  margin-left: 160px;
 }
 
 .header__title {
-  margin: 30px 0 10px 0;
+  margin: 30px 0  50px 0;
+  margin-left: 230px;
   font-size: 32px;
   line-height: 1.2;
   font-family: "Helvetica Neue";
@@ -28,6 +29,7 @@ body {
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
+  margin-top: px;
 }
 
 .links {
